tests/ui/consts/write-to-static-mut-in-static.stderr
error[E0080]: modifying a static's initial value from another static's initializer
  --> $DIR/write-to-static-mut-in-static.rs:2:33
   |
LL | pub static mut B: () = unsafe { A = 1; };
   |                                 ^^^^^ could not evaluate static initializer

error[E0080]: encountered static that tried to initialize itself with itself
  --> $DIR/write-to-static-mut-in-static.rs:7:21
   |
LL | pub static D: u32 = D;
   |                     ^ could not evaluate static initializer

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0080`.
